# HAIIP

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HAIIP_PreCode_Decisions (1).docx  HAIIP_RDI_Plan.docx  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  haiip_dev.db-shm  haiip_dev.db-wal  package.xml  pyproject.toml  setup.cfg  setup.py  toconsider.txt
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  integrity.yml
.pytest_cache/v/cache/: nodeids
.streamlit/: config.toml
docker/: api.Dockerfile  dashboard.Dockerfile  prometheus.yml  prometheus_alerts.yml  worker.Dockerfile
docs/: CONTRIBUTIONS.md  DATASET_CARD.md  LIMITATIONS.md  ML_OPS_RUNBOOK.md  MODEL_CARD.md  PAPER.md  RESULTS.md  USE_CASES.md  api-reference.md  architecture.md  deployment.md
docs/guides/: configuration.md  contributing.md  deployment.md  eu-ai-act-compliance.md  mlops.md  model-training.md  opc-ua.md  simulator.md  troubleshooting.md
gitops/argocd/: application.yaml
gitops/kustomize/base/: configmap.yaml  kustomization.yaml  pdb.yaml
gitops/kustomize/overlays/dev/: kustomization.yaml
gitops/kustomize/overlays/prod/: kustomization.yaml
gitops/kustomize/overlays/staging/: kustomization.yaml
grafana/dashboards/: drift_detection.json  economic_decisions.json  fleet_health.json  ml_ops.json
grafana/provisioning/dashboards/: all.yml
haiip/: __init__.py
haiip/api/: auth.py  config.py  correlation.py  database.py  deps.py  logging_config.py  main.py  middleware.py  ml_metrics.py  models.py  schemas.py  secrets.py  secrets_rotation.py  service_auth.py  token_blacklist.py
haiip/api/routes/: active_learning_routes.py  admin.py  agent.py  alerts.py  auth.py  documents.py  economic.py  feedback.py  gdpr.py  metrics.py  ml_ops.py  predict.py
haiip/core/: ab_testing.py  active_learning.py  agent.py  anomaly.py  auto_retrain.py  circuit_breaker.py  compliance.py  data_privacy.py  drift.py  economic_ai.py  economic_calibration.py  experiment.py  federated.py  federated_realistic.py  feedback.py  human_oversight.py  maintenance.py  model_registry.py  onnx_runtime.py  oversight_simulation.py  rag.py  safety.py  statistics.py  torch_models.py
haiip/dashboard/: app.py
haiip/dashboard/components/: auth.py  charts.py  demo_data.py  sidebar.py  status_bar.py  theme.py
haiip/dashboard/pages/: admin.py  alerts.py  audit_trail.py  feedback.py  live_monitor.py  maintenance.py  overview.py  query.py  roi_calculator.py
haiip/data/ingestion/: mqtt.py  opcua.py  opcua_connector.py  pipeline.py
haiip/data/loaders/: ai4i.py  base.py  cmapss.py  cwru.py  mimii.py
haiip/data/simulation/: simulator.py
haiip/edge/: __init__.py  inference.py  sync.py
haiip/observability/: __init__.py  cost_model.py  telemetry.py
haiip/ros2/: __init__.py  action_node.py  economic_node.py  human_override.py  inference_node.py  pipeline.py  vibration_publisher.py
haiip/ros2/launch/: haiip_closed_loop.launch.py
haiip/streaming/: __init__.py  kafka_consumer.py  kafka_producer.py  schema.py
haiip/tests/: conftest.py  test_documentation_honesty.py
haiip/tests/api/: test_active_learning_routes.py  test_admin.py  test_alerts.py  test_auth.py  test_documents.py  test_feedback.py  test_gdpr_routes.py  test_metrics.py  test_ml_ops.py  test_predict.py  test_secrets.py
haiip/tests/chaos/: test_chaos_engineering.py
haiip/tests/core/: test_active_learning.py  test_agent.py  test_anomaly.py  test_anomaly_shap.py  test_auto_retrain.py  test_circuit_breaker.py  test_compliance.py  test_data_privacy.py  test_drift.py  test_economic_ai.py  test_economic_calibration.py  test_experiment.py  test_federated.py  test_feedback.py  test_human_oversight.py  test_loaders.py  test_maintenance.py  test_maintenance_shap.py  test_ml_rigor.py  test_observability.py  test_onnx_runtime.py  test_oversight_simulation.py  test_pipeline.py  test_rag.py  test_rag_hallucination.py  test_safety.py  test_simulator.py  test_torch_models.py
haiip/tests/crash/: test_crash.py  test_crash_phase6.py
haiip/tests/dashboard/: test_charts.py  test_demo_data.py  test_roi.py
haiip/tests/edge/: test_edge_inference.py
haiip/tests/features/: test_ai_accuracy_compat.py  test_ai_relevance.py  test_ml_evaluation.py  test_phase6_user_journeys.py  test_user_journeys.py
haiip/tests/infra/: test_gitops.py  test_grafana_dashboards.py
haiip/tests/integration/: test_api_pipeline.py  test_industrial_pipeline.py  test_phase6_pipeline.py
haiip/tests/load/: locustfile.py  locustfile_phase6.py
haiip/tests/robustness/: __init__.py  test_network_faults.py
haiip/tests/security/: test_security.py  test_security_phase6.py
haiip/tests/streaming/: test_kafka_streaming.py
haiip/tests/workers/: test_retrain_tasks.py  test_workers.py
haiip/workers/: tasks.py
haiip_msgs/: CMakeLists.txt  package.xml
haiip_msgs/msg/: AIPrediction.msg  EconomicDecision.msg  HumanOverride.msg  MachineCommand.msg  VibrationReading.msg
helm/haiip/: Chart.yaml  values.yaml
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  network-policy.yaml  service.yaml
nginx/: haiip.conf
notebooks/: 01_economic_decision.ipynb  02_federated_learning.ipynb  03_human_oversight.ipynb  04_ml_fundamentals.ipynb  05_tree_models.ipynb  06_evaluation.ipynb  07_anomaly_detection.ipynb  08_time_series.ipynb  09_hyperparameter_tuning.ipynb  10_feature_engineering.ipynb  11_deployment.ipynb
notebooks/deployment/: Dockerfile  app.py  requirements.txt
notebooks/models/: metadata.json
terraform/: main.tf  variables.tf
