<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>haiip</name>
  <version>0.1.0</version>
  <description>
    HAIIP — Human-Aligned Industrial Intelligence Platform.
    ROS2 closed-loop pipeline: vibration sensor → AI inference →
    economic decision → machine actuator command → human override.
    EU AI Act Article 14 compliant (human oversight with TTL auto-expiry).
  </description>
  <maintainer email="admin@haiip.ai">NextIndustriAI Team</maintainer>
  <license>Proprietary</license>

  <!-- Build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 runtime -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>haiip_msgs</depend>

  <!-- Test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
